corrected wrong color bug

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1058,7 +1058,7 @@ SIMILAR STYLING DISTORTS THE POSITION OF THE ELEMENTS IN THE GRID**/
 }
 /*EMBEDDING CONTENT*/
 #pink{
-  border: 10px solid #91F188;
+  border: 10px solid #C685F9;
   border-radius: 100%;
 }
 /*TEXT-LEVEL SEMANTICS*/
